--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <title>Connor's Website</title>
+</head>
+
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+
+    <h1>Hello Internet!</h1>
+    <p>This is a paragraph.</p>
+    <script>
+        alert('Random Javascript!');
+    </script>
 </body>
 
 </html>
