--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://www.jayyunas.com/dist/index.html" />
+<meta http-equiv="refresh" content="0; url=https://jayyunas.github.io/dist/index.html" />
