--- a/index.html
+++ b/index.html
@@ -268,6 +268,13 @@
 
     <!-- contact
    ================================================== -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-7979506791592983",
+            enable_page_level_ads: true
+        });
+    </script>
     <section id="contact">
 
         <div class="overlay"></div>
