--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             enable_page_level_ads: true
         });
     </script>
+
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
@@ -42,8 +43,9 @@
     <!-- header
    ================================================== -->
     <header>
-
-
+        <div class="header-logo">
+            <a href="index.html">Infinity</a>
+        </div>
 
         <a id="header-menu-trigger" href="#0">
             <span class="header-menu-text">Menu</span>
@@ -112,7 +114,7 @@
                     <div class="col-twelve">
 
 
-                        <h3 class="animate-intro">Hello, World!</h3>
+                        <h3 class="animate-intro">Hello, World.</h3>
                         <h1 class="animate-intro">
                             I'm
                             <h29> Jay Yunas.
@@ -143,7 +145,7 @@
                 <a href="mailto:jayyunas@gmail.com"><i class="fa fa-envelope-square"></i></a>
             </li>
             <li class="animate-intro">
-                <a href="https://www.linkedin.com/in/jayyunas"><i class="fa fa-linkedin-square"></i></a>
+                <a href="https://www.linkedin.com/in/jayyunas/"><i class="fa fa-linkedin-square"></i></a>
             </li>
 
             <li class="animate-intro">
@@ -152,6 +154,14 @@
 
             <li class="animate-intro">
                 <a href="https://www.facebook.com/jayyunas"><i class="fa fa-facebook-square"></i></a>
+            </li>
+
+            <li class="animate-intro">
+                <a href="https://www.instagram.com/jayyunas"><i class="fa fa-instagram"></i></a>
+            </li>
+
+            <li class="animate-intro">
+                <a href="https://www.twitter.com/jayyunas"><i class="fa fa-twitter-square"></i></a>
             </li>
 
 
@@ -185,8 +195,8 @@
                     <img src="images/linkedin.jpg" alt="Profile Picture">
 
                     <p class="lead">I am currently a second year at <span style="color:#154360;">Connecticut College</span>, class of 2022, pursuing a degree in Computer Science and Economics, as well as a minor in Finance. I am a passionate programmer and look to pursue
-                        a career in Software Development and/or Finance. Additionly, I am involved with many of the leadership oppurtinities at Connecticut College, serving in the Student Government Association, South Asian Student Organization, International
-                        Student Organization and a Teaching Assistant to the Computer Science Department. </p>
+                        a career in Software Development and/or Finance. Additionly, I am involved with many of the leadership oppurtinities at Connecticut College, serving in the Honor Council, International Student Organization, and I am a Teaching
+                        Assistant to the Computer Science Department, as well as Writing Tutor. </p>
                 </div>
 
             </div>
@@ -196,6 +206,7 @@
         <div class="row about-content">
 
             <div class="col-six tab-full">
+
 
                 <h3>Profile</h3>
 
@@ -258,6 +269,19 @@
 
             </div>
 
+
+        </div>
+
+        <div class="row half-bottom">
+            <div class="col-six tab-full">
+                <p><img src="images/shutterbug.jpg"></p>
+            </div>
+        </div>
+
+        <div class="row half-bottom">
+            <div class="fluid-video-wrapper">
+                <iframe width="500" height="281" src="https://www.youtube-nocookie.com/embed/NJmHZiScFsY?controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
 
         <div class="row button-section">
@@ -266,6 +290,8 @@
                 <a href="resume/Jay Yunas Resume.pdf" title="Download Resume" class="button button-primary"> Resume</a>
             </div>
         </div>
+
+
 
     </section>
     <!-- /process-->
