new personal website

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
     <!-- favicons
 	================================================== -->
-
+    <link rel="icon" href="favicon.ico">
 
     <!-- header
    ================================================== -->
     <header>
         <div class="header-logo">
-            <a href="index.html">Infinity</a>
+            <a href="index.html">Jay</a>
         </div>
 
         <a id="header-menu-trigger" href="#0">
