--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                 </li>
 
                 <li class="animate-intro">
+                    <a href="https://www.youtube.com/channel/UCEfgKLclbGy6G7-6Tn3-UHg"><i class="fa fa-youtube-square"></i></a>
+                </li>
+
+
+                <li class="animate-intro">
                     <a href="https://www.twitter.com/jayyunas"><i class="fa fa-twitter-square"></i></a>
                 </li>
 
@@ -141,9 +146,11 @@
             <li class="animate-intro">
                 <a href="resume/Jay Yunas Resume.pdf"><i class="fa fa-file-text"></i></a>
             </li>
+
             <li class="animate-intro">
                 <a href="mailto:jayyunas@gmail.com"><i class="fa fa-envelope-square"></i></a>
             </li>
+
             <li class="animate-intro">
                 <a href="https://www.linkedin.com/in/jayyunas/"><i class="fa fa-linkedin-square"></i></a>
             </li>
@@ -158,6 +165,10 @@
 
             <li class="animate-intro">
                 <a href="https://www.instagram.com/jayyunas"><i class="fa fa-instagram"></i></a>
+            </li>
+
+            <li class="animate-intro">
+                <a href="https://www.youtube.com/jayyunas"><i class="fa fa-youtube-square"></i></a>
             </li>
 
             <li class="animate-intro">
@@ -280,7 +291,7 @@
 
         <div class="row half-bottom">
             <div class="fluid-video-wrapper">
-                <iframe width="500" height="281" src="https://www.youtube-nocookie.com/embed/NJmHZiScFsY?controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9TfK-CcYkAE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
 
