updated background, colors, youtube links

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </li>
 
                 <li class="animate-intro">
-                    <a href="https://www.youtube.com/channel/UCEfgKLclbGy6G7-6Tn3-UHg"><i class="fa fa-youtube-square"></i></a>
+                    <a href="https://www.youtube.com/channel/UCDZj9lRomPe0Xrh-dFh8Kag"><i class="fa fa-youtube-square"></i></a>
                 </li>
 
 
@@ -122,7 +122,7 @@
                         <h3 class="animate-intro">Hello, World.</h3>
                         <h1 class="animate-intro">
                             I'm
-                            <h29> Jay Yunas.
+                            <span style="color:rgb(20, 39, 71);"> Jay Yunas. <span>
                         </h1>
 
 
@@ -168,7 +168,7 @@
             </li>
 
             <li class="animate-intro">
-                <a href="https://www.youtube.com/jayyunas"><i class="fa fa-youtube-square"></i></a>
+                <a href="https://www.youtube.com/channel/UCDZj9lRomPe0Xrh-dFh8Kag"><i class="fa fa-youtube-square"></i></a>
             </li>
 
             <li class="animate-intro">
@@ -199,108 +199,107 @@
             <div class="col-twelve">
 
                 <h1><span style="color:#154360;">About</span></h1>
-                <h5>Let me introduce myself</h5>
+                        <h5>Let me introduce myself</h5>
 
-                <div class="intro-info">
+                        <div class="intro-info">
 
-                    <img src="images/linkedin.jpg" alt="Profile Picture">
+                            <img src="images/linkedin.jpg" alt="Profile Picture">
 
-                    <p class="lead">I am currently a second year at <span style="color:#154360;">Connecticut College</span>, class of 2022, pursuing a degree in Computer Science and Economics, as well as a minor in Finance. I am a passionate programmer and look to pursue
-                        a career in Software Development and/or Finance. Additionly, I am involved with many of the leadership oppurtinities at Connecticut College, serving in the Honor Council, International Student Organization, and I am a Teaching
-                        Assistant to the Computer Science Department, as well as Writing Tutor. </p>
+                            <p class="lead">I am currently a second year at <span style="color:#154360;">Connecticut College</span>, class of 2022, pursuing a degree in Computer Science and Economics, as well as a minor in Finance. I am a passionate programmer and look
+                                to pursue a career in Software Development and/or Finance. Additionly, I am involved with many of the leadership oppurtinities at Connecticut College, serving in the Honor Council, International Student Organization, and
+                                I am a Teaching Assistant to the Computer Science Department, as well as Writing Tutor. </p>
+                        </div>
+
+                    </div>
+                </div>
+                <!-- /section-intro -->
+
+                <div class="row about-content">
+
+                    <div class="col-six tab-full">
+
+
+                        <h3>Profile</h3>
+
+                        <ul class="info-list">
+                            <li>
+                                <strong>Fullname:</strong>
+                                <span>Jay Yunas</span>
+                            </li>
+                            <li>
+                                <strong>Birth Date:</strong>
+                                <span>June 21, 2000</span>
+                            </li>
+                            <li>
+                                <strong>Email:</strong>
+                                <span>jayyunas@gmail.com</span>
+                            </li>
+
+
+
+                            </li>
+                        </ul>
+                        <!-- /info-list -->
+
+                    </div>
+
+                    <div class="col-six tab-full">
+
+                        <h3>Skills</h3>
+                        <ul class="skill-bars">
+                            <li>
+                                <div class="progress percent100"><span>Proficient</span></div>
+                                <strong>Python</strong>
+                            </li>
+                            <li>
+                                <div class="progress percent100"><span>Proficient</span></div>
+                                <strong>Java</strong>
+                            </li>
+                            <li>
+
+                                <div class="progress percent100"><span>Proficient</span></div>
+                                <strong>HTML & CSS</strong>
+                            </li>
+                            <li>
+                                <div class="progress percent80"><span>Intermediate</span></div>
+                                <strong>SQL.</strong>
+                            </li>
+                            <li>
+
+                                <div class="progress percent70"><span>Intermediate</span></div>
+                                <strong>HTML & CSS</strong>
+                            </li>
+                            <li>
+                                <div class="progress percent50"><span>Novice</span></div>
+                                <strong>C</strong>
+                            </li>
+
+
+                        </ul>
+                        <!-- /skill-bars -->
+
+                    </div>
+
+
                 </div>
 
-            </div>
-        </div>
-        <!-- /section-intro -->
+                <div class="row half-bottom">
+                    <div class="col-six tab-full">
+                        <p><img src="images/shutterbug.jpg"></p>
+                    </div>
+                </div>
 
-        <div class="row about-content">
+                <div class="row half-bottom">
+                    <div class="fluid-video-wrapper">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/a_lBQmdrCzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
+                </div>
 
-            <div class="col-six tab-full">
-
-
-                <h3>Profile</h3>
-
-                <ul class="info-list">
-                    <li>
-                        <strong>Fullname:</strong>
-                        <span>Jay Yunas</span>
-                    </li>
-                    <li>
-                        <strong>Birth Date:</strong>
-                        <span>June 21, 2000</span>
-                    </li>
-                    <li>
-                        <strong>Email:</strong>
-                        <span>jayyunas@gmail.com</span>
-                    </li>
-
-
-
-                    </li>
-                </ul>
-                <!-- /info-list -->
-
-            </div>
-
-            <div class="col-six tab-full">
-
-                <h3>Skills</h3>
-                <ul class="skill-bars">
-                    <li>
-                        <div class="progress percent100"><span>Proficient</span></div>
-                        <strong>Python</strong>
-                    </li>
-                    <li>
-                        <div class="progress percent100"><span>Proficient</span></div>
-                        <strong>Java</strong>
-                    </li>
-                    <li>
-
-                        <div class="progress percent100"><span>Proficient</span></div>
-                        <strong>HTML & CSS</strong>
-                    </li>
-                    <li>
-                        <div class="progress percent80"><span>Intermediate</span></div>
-                        <strong>SQL.</strong>
-                    </li>
-                    <li>
-
-                        <div class="progress percent70"><span>Intermediate</span></div>
-                        <strong>HTML & CSS</strong>
-                    </li>
-                    <li>
-                        <div class="progress percent50"><span>Novice</span></div>
-                        <strong>C</strong>
-                    </li>
-
-
-                </ul>
-                <!-- /skill-bars -->
-
-            </div>
-
-
-        </div>
-
-        <div class="row half-bottom">
-            <div class="col-six tab-full">
-                <p><img src="images/shutterbug.jpg"></p>
-            </div>
-        </div>
-
-        <div class="row half-bottom">
-            <div class="fluid-video-wrapper">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9TfK-CcYkAE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div class="row button-section">
-            <div class="col-twelve">
-                <a href="mailto:jayyunas@gmail.com" title="Hire Me" class="button stroke">Email Me</a>
-                <a href="resume/Jay Yunas Resume.pdf" title="Download Resume" class="button button-primary"> Resume</a>
-            </div>
-        </div>
+                <div class="row button-section">
+                    <div class="col-twelve">
+                        <a href="mailto:jayyunas@gmail.com" title="Hire Me" class="button stroke">Email Me</a>
+                        <a href="resume/Jay Yunas Resume.pdf" title="Download Resume" class="button button-primary"> Resume</a>
+                    </div>
+                </div>
 
 
 
