updated page title with lightning

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Jay Yunas</title>
+    <title>Jay Yunas ⚡︎</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
