updated mobile logo issue

--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
 <!--<![endif]-->
 
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-7979506791592983",
-            enable_page_level_ads: true
-        });
-    </script>
-
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
@@ -206,7 +198,7 @@
                             <img src="images/linkedin.jpg" alt="Profile Picture">
 
                             <p class="lead">I am currently a second year at <span style="color:#154360;">Connecticut College</span>, class of 2022, pursuing a degree in Computer Science and Economics, as well as a minor in Finance. I am a passionate programmer and look
-                                to pursue a career in Software Development and/or Finance. Additionly, I am involved with many of the leadership oppurtinities at Connecticut College, serving in the Honor Council, International Student Organization, and
+                                to pursue a career in Software Development and/or Finance. Additionly, I am involved with many of the leadership opportunities at Connecticut College, serving in the Honor Council, International Student Organization, and
                                 I am a Teaching Assistant to the Computer Science Department, as well as Writing Tutor. </p>
                         </div>
 
@@ -326,60 +318,6 @@
         <!-- end section-intro -->
 
         <div class="row contact-content">
-
-            <div class="col-seven tab-full animate-this">
-
-                <h5>Send Me A Message</h5>
-
-                <!-- form -->
-                <form name="contactForm" id="contactForm" method="post">
-
-                    <div class="form-field">
-                        <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
-                    </div>
-
-                    <div class="row">
-                        <div class="col-six tab-full">
-                            <div class="form-field">
-                                <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-                            </div>
-                        </div>
-                        <div class="col-six tab-full">
-                            <div class="form-field">
-                                <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-field">
-                        <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
-                    </div>
-
-                    <div class="form-field">
-                        <button class="submitform">Submit</button>
-
-                        <div id="submit-loader">
-                            <div class="text-loader">Sending...</div>
-                            <div class="s-loader">
-                                <div class="bounce1"></div>
-                                <div class="bounce2"></div>
-                                <div class="bounce3"></div>
-                            </div>
-                        </div>
-                    </div>
-
-                </form>
-                <!-- end form -->
-
-                <!-- contact-warning -->
-                <div id="message-warning"></div>
-
-                <!-- contact-success -->
-                <div id="message-success">
-                    <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-                </div>
-
-            </div>
             <!-- end col-seven -->
 
             <div class="col-four tab-full contact-info end animate-this">
