--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
                         <div class="more animate-intro">
                             <a class="smoothscroll button stroke" href="#about">
-				  					Learn More
-				  				</a>
+                                Learn More
+                            </a>
                         </div>
 
                     </div>
@@ -173,11 +173,11 @@
         <!-- end home-social-list -->
 
         <div class="scrolldown">
-            <a href="#about" class="scroll-icon smoothscroll">
-		   	Scroll Down
+			<a href="#about" class="scroll-icon smoothscroll">		
+		   	Scroll Down		   	
 		   	<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 			</a>
-        </div>
+		</div>
 
     </section>
     <!-- end home -->
@@ -215,7 +215,7 @@
 
                         <ul class="info-list">
                             <li>
-                                <strong>Fullname:</strong>
+                                <strong>Full Name:</strong>
                                 <span>Jay Yunas</span>
                             </li>
                             <li>
@@ -225,6 +225,22 @@
                             <li>
                                 <strong>Email:</strong>
                                 <span>jayyunas@gmail.com</span>
+                            </li>
+                            <li>
+                                <strong>School:</strong>
+                                <span>Connecticut College</span>
+                            </li>
+                            <li>
+                                <strong>Majors:</strong>
+                                <span>Economics, Computer Science</span>
+                            </li>
+                            <li>
+                                <strong>Minor:</strong>
+                                <span>Finance</span>
+                            </li>
+                            <li>
+                                <strong>High School:</strong>
+                                <span>Woodstock School, INDIA</span>
                             </li>
 
 
@@ -254,7 +270,7 @@
                             </li>
                             <li>
                                 <div class="progress percent80"><span>Intermediate</span></div>
-                                <strong>SQL.</strong>
+                                <strong>SQL</strong>
                             </li>
                             <li>
 
@@ -269,26 +285,11 @@
 
                         </ul>
                         <!-- /skill-bars -->
-
                     </div>
-
-
-                </div>
-
-                <div class="row half-bottom">
-                    <div class="col-six tab-full">
-                        <p><img src="images/shutterbug.jpg"></p>
-                    </div>
-                </div>
-
-                <div class="row half-bottom">
-                    <div class="fluid-video-wrapper">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/a_lBQmdrCzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
                 </div>
 
                 <div class="row button-section">
                     <div class="col-twelve">
-                        <a href="mailto:jayyunas@gmail.com" title="Hire Me" class="button stroke">Email Me</a>
                         <a href="resume/Jay Yunas Resume.pdf" title="Download Resume" class="button button-primary"> Resume</a>
                     </div>
                 </div>
@@ -298,51 +299,258 @@
     </section>
     <!-- /process-->
 
-
-
-    <!-- contact
+    <!-- portfolio
    ================================================== -->
+    <section id="portfolio">
 
-    <section id="contact">
+        <div class="intro-wrap">
+
+            <div class="row narrow section-intro with-bottom-sep animate-this">
+                <div class="col-twelve">
+                    <h3>Showcase</h3>
+                    <h1>Some Of My Pictures.</h1>
+
+                    <p class="lead">Summertime</p>
+                </div>
+            </div>
+            <!-- end row section-intro -->
+
+        </div>
+        <!-- end intro-wrap -->
+
+        <div class="row portfolio-content">
+            <div class="col-twelve">
+                <div id="folio-wrap" class="bricks-wrapper">
+
+                    <div class="brick folio-item">
+                        <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-shutterbug.jpg" data-sub-html="#01">
+                            <a href="#" class="overlay">
+                                <img src="images/portfolio/shutterbug.jpg" alt="Skaterboy">
+                                <div class="item-text">
+                                    <span class="folio-types">
+                                    Mussoorie
+                                 </span>
+                                    <h3 class="folio-title">Race Day</h3>
+                                </div>
+                            </a>
+                        </div>
+                        <!-- end item-wrap -->
+
+                        <div id="01" class='hide'>
+                            <h4>Race Day</h4>
+                            <p>Woodstock School's annual interschool XC day!</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end folio-item -->
+
+                    <div class="brick folio-item">
+                        <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-yellowwall.jpg" data-sub-html="#02">
+                            <a href="#" class="overlay">
+                                <img src="images/portfolio/yellowwall.jpg" alt="Shutterbug">
+                                <div class="item-text">
+                                    <span class="folio-types">
+                                    Connecticut
+                                 </span>
+                                    <h3 class="folio-title">Sunset Over The Atlantic</h3>
+                                </div>
+                            </a>
+                            <a href="https://www.behance.net/" class='details-link' title="details">
+                                <i class="icon-link"></i>
+                            </a>
+                        </div>
+                        <!-- end item-wrap -->
+
+                        <div id="02" class='hide'>
+                            <h4>Sunset Over The Atlantic</h4>
+                            <p>On the northeast shoreline, the summer evenings make way for some breathtaking views.</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end folio-item -->
+
+                    <div class="brick folio-item">
+                        <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-architecture.jpg" data-sub-html="#03">
+                            <a href="#" class="overlay">
+                                <img src="images/portfolio/architecture.jpg" alt="Explore">
+                                <div class="item-text">
+                                    <span class="folio-types">
+                                    New York City
+                                 </span>
+                                    <h3 class="folio-title">Summer In The City</h3>
+                                </div>
+                            </a>
+                            <a href="https://www.behance.net/" class='details-link' title="details">
+                                <i class="icon-link"></i>
+                            </a>
+                        </div>
+                        <!-- end item-wrap -->
+
+                        <div id="03" class='hide'>
+                            <h4>Summer In The City</h4>
+                            <p>The summer brings the heat, and with it comes a lot of energy. The hustle and bustle of the city is ceaseless.</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end folio-item -->
+
+                    <div class="brick folio-item">
+                        <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-minimalismo.jpg" data-sub-html="#04">
+                            <a href="#" class="overlay">
+                                <img src="images/portfolio/minimalismo.jpg" alt="Minimalismo">
+                                <div class="item-text">
+                                    <span class="folio-types">
+                                    New Delhi
+                                 </span>
+                                    <h3 class="folio-title">Dusty Delhi</h3>
+                                </div>
+                            </a>
+                            <a href="https://www.behance.net/" class='details-link' title="details">
+                                <i class="icon-link"></i>
+                            </a>
+                        </div>
+                        <!-- end item-wrap -->
+
+                        <div id="04" class='hide'>
+                            <h4>Dusty Delhi</h4>
+                            <p>The scorching Indian summer combined with the tardy monsoon made for some extremely dusty days.</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end folio-item -->
+
+                    <div class="brick folio-item">
+                        <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-skaterboy.jpg" data-sub-html="#05">
+                            <a href="#" class="overlay">
+                                <img src="images/portfolio/skaterboy.jpg" alt="Bicycle">
+                                <div class="item-text">
+                                    <span class="folio-types">
+                                    New London
+                                 </span>
+                                    <h3 class="folio-title">Welcome to New London</h3>
+                                </div>
+                            </a>
+                            <a href="https://www.behance.net/" class='details-link' title="details">
+                                <i class="icon-link"></i>
+                            </a>
+                        </div>
+                        <!-- end item-wrap -->
+
+                        <div id="05" class='hide'>
+                            <h4>Welcome to New London</h4>
+                            <p>The beautifully painted mural in the center of town welcomers all travelers to the historic city of New London.</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end folio-item -->
+
+                    <div class="brick folio-item">
+                        <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-salad.jpg" data-sub-html="#06">
+                            <a href="#" class="overlay">
+                                <img src="images/portfolio/salad.jpg" alt="Salad">
+                                <div class="item-text">
+                                    <span class="folio-types">
+                                    Noida
+                                 </span>
+                                    <h3 class="folio-title">Vibrant City</h3>
+                                </div>
+                            </a>
+                            <a href="https://www.behance.net/" class='details-link' title="details">
+                                <i class="icon-link"></i>
+                            </a>
+                        </div>
+                        <!-- end item-wrap -->
+
+                        <div id="06" class='hide'>
+                            <h4>Vibrant City</h4>
+                            <p>While interning at Tech Mahindra, I was able to stay in Noida and experience rapidly urbanizing NCR region.</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end folio-item -->
+
+                </div>
+                <h1>Featured Video</h1>
+
+                <!-- end folio-wrap -->
+            </div>
+            <!-- end twelve -->
+        </div>
+
+        <!-- end portfolio-content -->
+
+    </section>
+    <!-- end portfolio -->
+
+    <!-- about
+   ================================================== -->
+    <section id="services">
 
         <div class="overlay"></div>
+        <div class="gradient-overlay"></div>
 
         <div class="row narrow section-intro with-bottom-sep animate-this">
-            <div class="col-twelve">
-                <h3>Contact</h3>
-                <h1>Get In Touch</h1>
+            <div class="col-full">
 
-                <!-- <p class="lead"> Can put information here</p> -->
+                <h3>Showcase</h3>
+                <h1>What We Do.</h1>
+
+                <p class="lead">Lorem ipsum Elit ut consequat veniam eu nulla nulla reprehenderit reprehenderit sit velit in cupidatat ex aliquip ut cupidatat Excepteur tempor id irure sed dolore sint sunt voluptate ullamco nulla qui Duis qui culpa voluptate enim ea
+                    aute qui veniam in irure et nisi nostrud deserunt est officia minim.</p>
+
             </div>
+            <!-- end col-full -->
         </div>
-        <!-- end section-intro -->
+        <!-- end row -->
 
-        <div class="row contact-content">
-            <!-- end col-seven -->
+        <div class="row half-bottom">
+            <div class="fluid-video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/a_lBQmdrCzM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
+        </div>
 
-            <div class="col-four tab-full contact-info end animate-this">
+        <!-- contact
+   ================================================== -->
 
-                <h5>Contact Information</h5>
+        <section id="contact">
 
-                <div class="cinfo">
-                    <h6>Where to Find Me</h6>
-                    <p>
-                        Connecticut College,<br> New London, CT<br> 06320 US
-                    </p>
+            <div class="overlay"></div>
+
+            <div class="row narrow section-intro with-bottom-sep animate-this">
+                <div class="col-twelve">
+                    <h3>Contact</h3>
+                    <h1>Get In Touch</h1>
+
+                    <!-- <p class="lead"> Can put information here</p> -->
                 </div>
-                <!-- end cinfo -->
+            </div>
+            <!-- end section-intro -->
 
-                <div class="cinfo">
-                    <h6>Email Me At</h6>
-                    <p>
-                        <a href="mailto:jayyunas@gmail.com">jayyunas@gmail.com<br>
+            <div class="row contact-content">
+                <!-- end col-seven -->
+
+                <div class="col-four tab-full contact-info end animate-this">
+
+                    <h5>Contact Information</h5>
+
+                    <div class="cinfo">
+                        <h6>Where to Find Me</h6>
+                        <p>
+                            Connecticut College,<br> New London, CT<br> 06320 US
+                        </p>
+                    </div>
+                    <!-- end cinfo -->
+
+                    <div class="cinfo">
+                        <h6>Email Me At</h6>
+                        <p>
+                            <a href="mailto:jayyunas@gmail.com">jayyunas@gmail.com<br>
 				   </p>
 	   		</div> <!-- end cinfo -->
 
 	   		<div class="cinfo">
 	   			<h6>Call Me At</h6>
 	   			<p>
-				   	Mobile: +1 (646) 436 4467 <br>
+				   	Mobile: +1 (646) 436-4467 <br>
 				   </p>
 	   		</div>
 
@@ -355,62 +563,26 @@
 
 	<!-- footer
    ================================================== -->
-	<footer>
-     	<div class="footer-main">
-
-   		<div class="row">
-
-	      	<div class="col-five tab-full footer-about">
-
-	            <h4 class="h05">Hire Me</h4>
-
-	            <p></p>
-
-		      </div> <!-- end footer-about -->
-
-	      	<div class="col-three tab-full footer-social">
-
-
-	      	</div> <!-- end footer-social -->
-
-
-	      </div> <!-- end row -->
-
-   	</div> <!-- end footer-main -->
-
-   	<div class="footer-bottom">
-
-      	<div class="row">
-
-      		<div class="col-twelve">
-	      		<div class="copyright">
-		        <!-- 	 <span>© Jay Yunas</span> -->
-		         <!--	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>-->
-                </div>
+   <footer>
+        <div class="footer-bottom">
+            <div class="copyright">
+                <span>© Copyright Jay Yunas 2019.</span>
             </div>
-
-        </div>
+                
 
         </div>
         <!-- end footer-bottom -->
+                </footer>
 
-        <div id="go-top">
-            <a class="smoothscroll" title="Back to Top" href="#top">
-                <i class="fa fa-long-arrow-up" aria-hidden="true"></i>
-            </a>
-        </div>
-        </footer>
-
-        <div id="preloader">
-            <div id="loader"></div>
-        </div>
-
-        <!-- Java Script
+                <div id="preloader">
+                    <div id="loader"></div>
+                </div>
+                <!-- Java Script
    ================================================== -->
-        <script src="js/jquery-2.1.3.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+                <script src="js/jquery-2.1.3.min.js"></script>
+                <script src="js/plugins.js"></script>
+                <script src="js/main.js"></script>
 
-        </body>
+                </body>
 
 </html>
