updated video showcase

--- a/index.html
+++ b/index.html
@@ -470,8 +470,6 @@
                     <!-- end folio-item -->
 
                 </div>
-                <h1>Featured Video</h1>
-
                 <!-- end folio-wrap -->
             </div>
             <!-- end twelve -->
@@ -493,10 +491,9 @@
             <div class="col-full">
 
                 <h3>Showcase</h3>
-                <h1>What We Do.</h1>
+                <h1>Featured Video</h1>
 
-                <p class="lead">Lorem ipsum Elit ut consequat veniam eu nulla nulla reprehenderit reprehenderit sit velit in cupidatat ex aliquip ut cupidatat Excepteur tempor id irure sed dolore sint sunt voluptate ullamco nulla qui Duis qui culpa voluptate enim ea
-                    aute qui veniam in irure et nisi nostrud deserunt est officia minim.</p>
+                <p class="lead">A short film of Mussoorie, India. Located in the foothills of the Himalayas, the quaint hillstation sits 7000ft. above sea level and has some of the most beautiful sunsets in the world.</p>
 
             </div>
             <!-- end col-full -->
@@ -569,14 +566,9 @@
                 <span>© Copyright Jay Yunas 2019.</span>
             </div>
                 
-
         </div>
         <!-- end footer-bottom -->
                 </footer>
-
-                <div id="preloader">
-                    <div id="loader"></div>
-                </div>
                 <!-- Java Script
    ================================================== -->
                 <script src="js/jquery-2.1.3.min.js"></script>
