--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <h3 class="animate-intro">Hello, World.</h3>
                         <h1 class="animate-intro">
                             I'm
-                            <span style="color:rgb(20, 39, 71);"> Jay Yunas. <span>
+                            <span style="color: black;"> Jay Yunas. <span>
                         </h1>
 
 
