--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             </li>
                             <li>
                                 <div class="progress percent50"><span>Novice</span></div>
-                                <strong>C</strong>
+                                <strong>C++</strong>
                             </li>
 
 
