--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </li>
 
                 <li class="animate-intro">
-                    <a href="https://www.youtube.com/channel/UCDZj9lRomPe0Xrh-dFh8Kag"><i class="fa fa-youtube-square"></i></a>
+                    <a href="https://www.youtube.com/jayyunas"><i class="fa fa-youtube-square"></i></a>
                 </li>
 
 
@@ -199,9 +199,9 @@
 
                             <img src="images/linkedin.jpg" alt="Profile Picture">
 
-                            <p class="lead">I am currently a second year at <span style="color:#154360;">Connecticut College</span>, class of 2022, pursuing a degree in Computer Science and Economics, as well as a minor in Finance. I am a passionate programmer and look
+                            <p class="lead">I am currently a second year at <span style="color:#154360;">Connecticut College</span>, class of 2022, majoring in Computer Science and Economics, as well as a minor in Finance. I am a passionate programmer and look
                                 to pursue a career in Software Development and/or Finance. Additionly, I am involved with many of the leadership opportunities at Connecticut College, serving in the Honor Council, International Student Organization, and
-                                I am a Teaching Assistant to the Computer Science Department, as well as Writing Tutor. </p>
+                                I am a Teaching Assistant to the Computer Science Department, as well as a Writing Tutor at the Roth Writing Center. </p>
                         </div>
 
                     </div>
@@ -227,6 +227,7 @@
                             <li>
                                 <strong>Email:</strong>
                                 <span>jayyunas@gmail.com</span>
+								<span>jyunas@conncoll.edu</span>
                             </li>
                             <li>
                                 <strong>School:</strong>
@@ -242,7 +243,7 @@
                             </li>
                             <li>
                                 <strong>High School:</strong>
-                                <span>Woodstock School, INDIA</span>
+                                <span>Woodstock School, India</span>
                             </li>
 
 
@@ -258,11 +259,11 @@
                         <h3>Skills</h3>
                         <ul class="skill-bars">
                             <li>
-                                <div class="progress percent100"><span>Proficient</span></div>
+                                <div class="progress percent100"><span>Skilled</span></div>
                                 <strong>Python</strong>
                             </li>
                             <li>
-                                <div class="progress percent100"><span>Proficient</span></div>
+                                <div class="progress percent100"><span>Skilled</span></div>
                                 <strong>Java</strong>
                             </li>
                             <li>
@@ -275,7 +276,7 @@
                                 <strong>HTML & CSS</strong>
                             </li>
                             <li>
-                                <div class="progress percent50"><span>Novice</span></div>
+                                <div class="progress percent50"><span>Proficient</span></div>
                                 <strong>C++</strong>
                             </li>
 
