updating resume and intro

--- a/index.html
+++ b/index.html
@@ -199,9 +199,8 @@
 
                             <img src="images/linkedin.jpg" alt="Profile Picture">
 
-                            <p class="lead">I am currently a second year at <span style="color:#154360;">Connecticut College</span>, class of 2022, majoring in Computer Science and Economics, as well as a minor in Finance. I am a passionate programmer and look
-                                to pursue a career in Software Development and/or Finance. Additionly, I am involved with many of the leadership opportunities at Connecticut College, serving in the Honor Council, International Student Organization, and
-                                I am a Teaching Assistant to the Computer Science Department, as well as a Writing Tutor at the Roth Writing Center. </p>
+                            <p class="lead">I am currently a junior at <span style="color:#154360;">Connecticut College</span>, class of 2022, majoring in Computer Science and Economics, as well as minoring in Finance. I am a passionate programmer pursuing a career in
+                                Software Engineering.</p>
                         </div>
 
                     </div>
@@ -227,7 +226,7 @@
                             <li>
                                 <strong>Email:</strong>
                                 <span>jayyunas@gmail.com</span>
-								<span>jyunas@conncoll.edu</span>
+                                <span>jyunas@conncoll.edu</span>
                             </li>
                             <li>
                                 <strong>School:</strong>
@@ -259,25 +258,29 @@
                         <h3>Skills</h3>
                         <ul class="skill-bars">
                             <li>
-                                <div class="progress percent100"><span>Skilled</span></div>
+                                <div class="progress percent100"><span>Highly Proficient</span></div>
                                 <strong>Python</strong>
                             </li>
                             <li>
-                                <div class="progress percent100"><span>Skilled</span></div>
+                                <div class="progress percent100"><span>Highly Proficient</span></div>
                                 <strong>Java</strong>
                             </li>
                             <li>
-                                <div class="progress percent80"><span>Intermediate</span></div>
+                                <div class="progress percent90"><span>Skilled</span></div>
+                                <strong>JavaScript</strong>
+                            </li>
+                            <li>
+                                <div class="progress percent80"><span>Proficient</span></div>
                                 <strong>SQL</strong>
                             </li>
                             <li>
 
-                                <div class="progress percent70"><span>Intermediate</span></div>
+                                <div class="progress percent70"><span>Proficient</span></div>
                                 <strong>HTML & CSS</strong>
                             </li>
                             <li>
-                                <div class="progress percent50"><span>Proficient</span></div>
-                                <strong>C++</strong>
+                                <div class="progress percent50"><span>Novice</span></div>
+                                <strong>Swift</strong>
                             </li>
 
 
