--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <ul class="home-social-list">
 
             <li class="animate-intro">
-                <a href="resume/Jay Yunas Resume.pdf"><i class="fa fa-file-text"></i></a>
+                <a href="resume/jay_yunas_resume.pdf"><i class="fa fa-file-text"></i></a>
             </li>
 
             <li class="animate-intro">
