--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <ul class="nav-list">
                 <li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
-                <li><a href="resume/Jay Yunas Resume.pdf" title="">Resume</a></li>
+                <li><a href="resume/jay_yunas_resume.pdf" title="">Resume</a></li>
                 <li><a class="smoothscroll" href="#about" title="">About</a></li>
                 <li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
             </ul>
@@ -60,7 +60,7 @@
             <ul class="header-social-list">
 
                 <li class="animate-intro">
-                    <a href="resume/Jay Yunas Resume.pdf"><i class="fa fa-file-text"></i></a>
+                    <a href="resume/jay_yunas_resume.pdf"><i class="fa fa-file-text"></i></a>
                 </li>
 
                 <li class="animate-intro">
@@ -291,7 +291,7 @@
 
                 <div class="row button-section">
                     <div class="col-twelve">
-                        <a href="resume/Jay Yunas Resume.pdf" title="Download Resume" class="button button-primary"> Resume</a>
+                        <a href="resume/jay_yunas_resume.pdf" title="Download Resume" class="button button-primary"> Resume</a>
                     </div>
                 </div>
 
