--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 
                             <img src="images/linkedin.jpg" alt="Profile Picture">
 
-                            <p class="lead">I am currently a junior at <span style="color:#154360;">Connecticut College</span>, class of 2022, majoring in Computer Science and Economics, as well as minoring in Finance. I am a passionate programmer pursuing a career in
-                                Software Engineering.</p>
+                            <p class="lead">I am currently a senior at <span style="color:#154360;">Connecticut College</span>, class of 2022, majoring in Computer Science, as well as minoring in Finance & Economics. I am a passionate developer pursuing a career in Software
+                                Engineering.</p>
                         </div>
 
                     </div>
@@ -266,23 +266,34 @@
                                 <strong>Java</strong>
                             </li>
                             <li>
-                                <div class="progress percent90"><span>Skilled</span></div>
+                                <div class="progress percent90"><span>Highly Proficient</span></div>
                                 <strong>JavaScript</strong>
                             </li>
                             <li>
-                                <div class="progress percent80"><span>Proficient</span></div>
+                                <div class="progress percent80"><span>Skilled</span></div>
                                 <strong>SQL</strong>
                             </li>
                             <li>
 
-                                <div class="progress percent70"><span>Proficient</span></div>
+                                <div class="progress percent70"><span>Skilled</span></div>
                                 <strong>HTML & CSS</strong>
                             </li>
                             <li>
-                                <div class="progress percent50"><span>Novice</span></div>
-                                <strong>Swift</strong>
+                                <div class="progress percent70"><span>Skilled</span></div>
+                                <strong>C++</strong>
                             </li>
-
+                            <li>
+                                <div class="progress percent50"><span>Novice</span></div>
+                                <strong>Go</strong>
+                            </li>
+                            <li>
+                                <div class="progress percent30"><span>Novice</span></div>
+                                <strong>C#</strong>
+                            </li>
+                            <li>
+                                <div class="progress percent30"><span>Novice</span></div>
+                                <strong>Racket</strong>
+                            </li>
 
                         </ul>
                         <!-- /skill-bars -->
