updating resume path

--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
                             <img src="images/linkedin.jpg" alt="Profile Picture">
 
                             <p class="lead">I am currently a senior at <span style="color:#154360;">Connecticut College</span>, class of 2022, majoring in Computer Science, as well as minoring in Finance & Economics. I am a passionate developer pursuing a career in Software
-                                Engineering.</p>
+                                Engineering.
+                            </p>
                         </div>
 
                     </div>
@@ -302,7 +303,7 @@
 
                 <div class="row button-section">
                     <div class="col-twelve">
-                        <a href="resume/jay_yunas_resume.pdf" title="Download Resume" class="button button-primary"> Resume</a>
+                        <a href="resume/Jay-Yunas-Resume-Software-Engineer.pdf" title="Download Resume" class="button button-primary"> Resume</a>
                     </div>
                 </div>
 
